; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/lufa/extr_outputselect.c_where_to_send.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/lufa/extr_outputselect.c_where_to_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@desired_output = common dso_local global i64 0, align 8
@OUTPUT_AUTO = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @where_to_send() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @desired_output, align 8
  %3 = load i64, i64* @OUTPUT_AUTO, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i64 (...) @auto_detect_output()
  store i64 %6, i64* %1, align 8
  br label %9

7:                                                ; preds = %0
  %8 = load i64, i64* @desired_output, align 8
  store i64 %8, i64* %1, align 8
  br label %9

9:                                                ; preds = %7, %5
  %10 = load i64, i64* %1, align 8
  ret i64 %10
}

declare dso_local i64 @auto_detect_output(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
